--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/game.css">
-    <script defer src="/assets/script.js"></script>
+    <script defer src="./assets/script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -20,6 +20,14 @@
                         <div id="progressBarFull"></div>
                     </div>
                 </div>
+                <div class="timer">
+                    <p id="timer" class="timer">
+                        Timer
+                    </p>
+                    <p class="timer-text" id="timer-text">
+                        60
+                    </p>
+                </div>
                 <div class="hud-item">
                     <p class="hud-prefix">
                         Score
@@ -29,7 +37,7 @@
                     </h1>
                 </div>
             </div>
-            <div id="question">What is the answer to this question?</div>
+            <h1 id="question">What is the answer to this question?</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
                 <p class="choice-text" data-number="1">Choice 1</p>
