--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 time,
                 and answer accurately. Have fun!
             </p>
-            <a href="/game.html" class="btn">Start Quiz</a>
-            <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
+            <a href="./game.html" id="start-quiz" class="btn">Start Quiz</a>
+            <a href="./highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
     </div>
 </body>
