--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
                         Timer
                     </p>
                     <p class="timer-text" id="timer-text">
-                        60
+                        120
                     </p>
                 </div>
                 <div class="hud-item">
@@ -40,19 +40,19 @@
             <h1 id="question">What is the answer to this question?</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
-                <p class="choice-text" data-number="1">Choice 1</p>
+                <p class="choice-text" id="choice-one" data-number="1">Choice 1</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">B</p>
-                <p class="choice-text" data-number="2">Choice 2</p>
+                <p class="choice-text" id="choice-two" data-number="2">Choice 2</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">C</p>
-                <p class="choice-text" data-number="3">Choice 3</p>
+                <p class="choice-text" id="choice-three" data-number="3">Choice 3</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">D</p>
-                <p class="choice-text" data-number="4">Choice 4</p>
+                <p class="choice-text" id="choice-four" data-number="4">Choice 4</p>
             </div>
         </div>
     </div>
