almost finished but got lost in the sauce with local storage

--- a/end.html
+++ b/end.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Highj Scores</title>
+    <title>End of Quiz</title>
     <link rel="stylesheet" href="./assets/style.css">
     <script defer src="./assets/end.js"></script>
 </head>
@@ -19,10 +19,9 @@
                 <input type="text" name="name" id="username"
                 placeholder="Enter your name">
             </form>
-            <button class="btn" id="saveScoreBtn" type="submit" 
-            onclick="saveHighScore(event)" disabled>Save</button>
-            <a href="/game.html" class="btn">Play Again</a>
-            <a href="/" class="btn">Go Home</a>
+            <button class="btn" id="saveScoreBtn" type="submit">Save</button>
+            <a href="./game.html" class="btn">Play Again</a>
+            <a href="./index.html" class="btn">Go Home</a>
         </div>
     </div>
 </body>
